# YunIjkPlayer

./: gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/ldh/testijkplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml  build.bat
app/src/main/cpp/: cy_video_render.h  s.c  source.cpp
app/src/main/java/com/example/ldh/testijkplayer/: MainActivity.java
app/src/main/jni/: Android.mk  Application.mk
app/src/main/jni/android-ndk-prof/: Android-include.mk  Android.mk  prof.c  prof.h
app/src/main/jni/ffmpeg/: Android.mk
app/src/main/jni/ijkmedia/ijkplayer/: Android.mk
app/src/main/jni/ijkmedia/ijkplayer/android/: ijkplayer_android.c  ijkplayer_jni.c
app/src/main/jni/ijkmedia/ijksdl/: Android.mk  ijksdl_egl.c  ijksdl_vout.c
app/src/main/jni/ijkmedia/ijksdl/android/: ijksdl_vout_android_nativewindow.c  ijksdl_vout_android_nativewindow.h  ijksdl_vout_android_surface.c
app/src/main/prebuilt/ffmpeg-armv7a/include/libffmpeg/: config.h
app/src/main/prebuilt/ffmpeg-armv7a/lib/pkgconfig/: libavcodec.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/src/main/prebuilt/ffmpeg-x86/: config.asm
app/src/main/prebuilt/ffmpeg-x86/include/libffmpeg/: config.h
app/src/main/prebuilt/ffmpeg-x86/lib/pkgconfig/: libavcodec.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/ldh/testijkplayer/: ExampleUnitTest.java
ijkplayer-java/: build.gradle
(+6 files in other folders)
